fix: update dark mode colors

--- a/src/assets/styles/tokens/_colors.scss
+++ b/src/assets/styles/tokens/_colors.scss
@@ -197,9 +197,9 @@
   --grey-100: #CACFD8;
   --grey-50: #99A0AE;
   --grey-40: #717784;
-  --grey-30: #525866;
-  --grey-20: #2B303B;
-  --grey-0: #161e27;
+  --grey-30: #151921;
+  --grey-20: #151a21;
+  --grey-0: #090d15;
 
-  --white: #0E121B;
+  --white: #050505;
 }
